# esphome-goodnature

./: .gitignore  Goodnature A24 Rat & Stoat Trap - Chirp BLE Protocol.md  Goodnature_protocol.txt  README  esp-idf-setup-script.sh  goodnature_ble.yaml
components/goodnature_ble/: __init__.py  goodnature_ble_listener.cpp  goodnature_ble_listener.h  sensor.py
components/goodnature_ble/tests/: CMakeLists.txt  sdkconfig  test_goodnature_ble.cpp
